--- a/0x00-html_advanced/5-index.html
+++ b/0x00-html_advanced/5-index.html
@@ -17,7 +17,7 @@
             Hero section
         </section>
         <section>
-            Service section
+            Services section
         </section>
         <section>
             Works section
@@ -26,7 +26,7 @@
             About section
         </section>
         <section>
-            Latest new section
+            Latest news section
         </section>
         <section>
             Testimonials section
