--- a/0x00-html_advanced/6-index.html
+++ b/0x00-html_advanced/6-index.html
@@ -21,24 +21,24 @@
         </section>
         <section>
             Works section
-            <article>Work #1</article>
-            <article>Work #2</article>
-            <article>Work #3</article>
+            <article>work #1</article>
+            <article>work #2</article>
+            <article>work #3</article>
         </section>
         <section>
             About section
         </section>
         <section>
             Latest news section
-            <article>Article #1</article>
-            <article>Article #2</article>
-            <article>Article #3</article>
+            <article>article #1</article>
+            <article>article #2</article>
+            <article>article #3</article>
         </section>
         <section>
             Testimonials section
-            <article>Testimonial #1</article>
-            <article>Testimonial #2</article>
-            <article>Testimonial #3</article>
+            <article>testimonial #1</article>
+            <article>testimonial #2</article>
+            <article>testimonial #3</article>
         </section>
         <section>
             Contact section
