--- a/0x00-html_advanced/6-index.html
+++ b/0x00-html_advanced/6-index.html
@@ -21,9 +21,9 @@
         </section>
         <section>
             Works section
-            <article>work #1</article>
-            <article>work #2</article>
-            <article>work #3</article>
+            <article>Work #</article>
+            <article>Work #</article>
+            <article>Work #</article>
         </section>
         <section>
             About section
