--- a/0x00-html_advanced/14-index.html
+++ b/0x00-html_advanced/14-index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <span>Techuim</span>
+        <span>Techium</span>
         <nav></nav>
     </header>
     <main>
@@ -53,18 +53,18 @@
         </section>
         <section>
             <h2>Latest news</h2>
+            <p>Career</p>
             <article>
-                <p>Career</p>
                 <h3>Hoc loco tenere se Triarius non potuit.</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
             </article>
+            <p>Digital Life</p>
             <article>
-                <p>Digital Life</p>
                 <h3>Ut alios omittam, hunc appello, quem ille unum secutus est.</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tum mihi Piso: Quid ergo? Tum ille: Ain tandem? Non autem hoc: igitur ne illud quidem. Sed quod proximum fuit non vidit. Nos commodius agimus. An nisi populari fama?</p>
             </article>
+            <p>Social</p>
             <article>
-                <p>Social</p>
                 <h3>Bestiarum vero nullum iudicium puto.</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non igitur bene. Quid enim est a Chrysippo praetermissum in Stoicis? Pugnant Stoici cum Peripateticis. Prioris generis est docilitas, memoria; Apparet statim, quae sint officia, quae actiones.</p>
             </article>
@@ -72,15 +72,9 @@
         <section>
             <h2>Testimonials</h2>
             <p>We are more than a digital company</p>
-            <article>
-                <h3>Testimonial 1</h3>
-            </article>
-            <article>
-                <h3>Testimonial 2</h3>
-            </article>
-            <article>
-                <h3>Testimonial 3</h3>
-            </article>
+            <article>Testimonial 1</article>
+            <article>Testimonial 2</article>
+            <article>Testimonial 3</article>
         </section>
         <section>
             <h2>Contact</h2>
