--- a/0x00-html_advanced/17-index.html
+++ b/0x00-html_advanced/17-index.html
@@ -24,6 +24,7 @@
 
         <!-- Hero section -->
         <section>
+            <!-- Hero section -->
             <div>
                 <h2>We help you build your brand!</h2>
             </div>
@@ -31,6 +32,7 @@
 
         <!-- Services section -->
         <section>
+            <!-- Services section -->
             <div>
                 <header>
                     <h2>Services</h2>
@@ -49,6 +51,7 @@
 
         <!-- Works section -->
         <section>
+            <!-- Works section -->
             <div>
                 <header>
                     <h2>Works</h2>
@@ -70,6 +73,7 @@
 
         <!-- About Us section -->
         <section>
+            <!-- About Us section -->
             <div>
                 <header>
                     <h2>About Us</h2>
@@ -88,6 +92,7 @@
 
         <!-- Latest news section -->
         <section>
+            <!-- Latest news section -->
             <div>
                 <header>
                     <h2>Latest news</h2>
@@ -114,6 +119,7 @@
 
         <!-- Testimonials section -->
         <section>
+            <!-- Testimonials section -->
             <div>
                 <header>
                     <h2>Testimonials</h2>
@@ -129,6 +135,7 @@
 
         <!-- Contact section -->
         <section>
+            <!-- Contact section -->
             <div>
                 <header>
                     <h2>Contact</h2>
@@ -143,6 +150,7 @@
 
     <!-- Footer to help with scanning your code -->
     <footer>
+        <!-- Footer -->
         <div>
             Footer
         </div>
