--- a/0x00-html_advanced/33-styleguide.html
+++ b/0x00-html_advanced/33-styleguide.html
@@ -110,11 +110,11 @@
         </div>
         <div>
           <pre>
-							<code>
-								<h2>My title</h2>
-								<p>Proin lacus turpis, feugiat sit amet sollicitudin non, volutpat in libero. Aenean hendrerit ultrices nulla ac lobortis. Vestibulum consectetur nibh vel ante rhoncus faucibus.</p>
-						</code>
-						</pre>
+            <code>
+              <h2>My title</h2>
+              <p>Proin lacus turpis, feugiat sit amet sollicitudin non, volutpat in libero. Aenean hendrerit ultrices nulla ac lobortis. Vestibulum consectetur nibh vel ante rhoncus faucibus.</p>
+            </code>
+          </pre>
         </div>
         <div>
           <p>
@@ -123,6 +123,43 @@
           </p>
         </div>
       </section>
+
+      <br />
+      <!-- Table -->
+      <section>
+        <header>
+          <h2>Table</h2>
+        </header>
+        <div>
+          <table>
+            <thead>
+              <tr>
+                <th scope="col">Title</th>
+                <th scope="col">Director</th>
+                <th scope="col">Release Date</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <th scope="row">The Shawshank Redemption</th>
+                <td>Frank Darabont</td>
+                <td>1994</td>
+              </tr>
+              <tr>
+                <th scope="row">The Godfather</th>
+                <td>Francis Ford Coppola</td>
+                <td>1972</td>
+              </tr>
+              <tr>
+                <th scope="row">The Dark Knight</th>
+                <td>Christopher Nolan</td>
+                <td>2008</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </section>
+
     </main>
     <footer></footer>
   </body>
